Improve makefile support.
Also, ignore samples/**/*.[ly].

  * Makefile.inc (products): renamed to adagoop_products.
    All products depend on INPUT.
  * samples/.gitignore: new.

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -45,9 +45,9 @@ SCAYACC_ADA_PRODUCTS =				\
   $(PREFIX)_parser.ads				\
   $(PREFIX)_parser.adb
 
-products: $(ADAGOOP_ADA_PRODUCTS) $(SCAFLEX_ADA_PRODUCTS) $(SCAYACC_ADA_PRODUCTS)
+adagoop_products: $(ADAGOOP_ADA_PRODUCTS) $(SCAFLEX_ADA_PRODUCTS) $(SCAYACC_ADA_PRODUCTS)
 
-$(ADAGOOP_ADA_PRODUCTS) $(ADAGOOP_OTHER_PRODUCTS):
+$(ADAGOOP_ADA_PRODUCTS) $(ADAGOOP_OTHER_PRODUCTS): $(ADAGOOP_INPUTS)
 	$(ADAGOOP)/adagoop $(ADAGOOP_INPUTS) $(PREFIX)
 
 $(SCAFLEX_ADA_PRODUCTS): $(SCAFLEX_INPUTS)
